--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Architect Theme by Jason Long
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}"><h1>{{ post.title }}</h1></a></li>
+      <li><a href="{{ site.baseurl }}{{ post.url }}"><h1>{{ post.title }}</h1></a></li>
     {% endfor %}
   </ul>
 </div>
