--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@ title: Architect Theme by Jason Long
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
     {% for post in site.posts %}
-      <li><a href="{{ site.baseurl }}{{ post.url }}"><h1>{{ post.title }}</h1></a></li>
+      <a href="{{ site.baseurl }}{{ post.url }}"><h1>{{ post.title }}</h1></a>
     {% endfor %}
-  </ul>
 </div>
