--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: KimYeEun's Devlog
 
 <div id="home">
     {% for post in site.posts %}
-      <a href="{{ site.baseurl }}{{ post.url }}"><h1>{{ post.title }}</h1></a>
+      <h1>{{ post.title }}</h1>
       <h4>{{ post.content }}</h4>
     {% endfor %}
 </div>
