--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: KimYeEun's Devlog
       <div class="div-main-content">
       <div class="div-main-text">
       <h1>{{ post.title }}</h1>
-      <h4>{{ post.content }}</h4>
+      {{ post.content }}
       </div>
       </div>
     {% endfor %}
