--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ title: KimYeEun's Devlog
     {% for post in site.posts %}
       <div class="div-main">
       <div class="div-main-content">
+      <p>{{ post.categories }}</p>
       <h1>{{ post.title }}</h1>
+      <p>{{ post.date }}</p>
       <div class="div-main-text">
       {{ post.content }}
       </div>
