--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: KimYeEun's Devlog
     {% for post in site.posts %}
       <div class="div-main">
       <div class="div-main-content">
-      <p>{{ post.categories }}</p>
+      <p class="p-category">{{ post.categories }}</p>
       <h1>{{ post.title }}</h1>
       <div class="div-main-text">
       {{ post.content }}
